# casino-game-testing

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  playwright-mcp.config.json  pyproject.toml
.claude/: settings.json
.claude/agents/: backoffice-reconciler.md  brand-calibrator.md  game-batch-runner.md  qa-report-writer.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/qa-report/: SKILL.md  gen_detail_only.py  gen_qa_report.py  qa-report-template.html  report_common.py
.claude/skills/test-game-brand/: SKILL.md  gen_run_artifacts.py
brands/: _schema.yaml  _template.yaml
docs/: acceptance-fixtures.md  architecture-plan.md  mac-dryrun-checklist.md  workflow-overview.html
hooks/: pre-commit
scripts/: secret-scan.sh
scripts/claude-hooks/: check-screenshot-path.py  deny-resize.sh  ensure-git-hookspath.sh
